crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_where_assoc_eq.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: " i.Item = Number"
---
AssocEq(
    1,
    9,
)
