crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_where_assoc_name.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: " i.item == Number"
---
AssocName(
    1,
    4,
)
