crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_where_assoc_type.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: " i.Item == )"
---
Type(
    Start(
        1,
        12,
    ),
    1,
    12,
)
