crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_where_bad_bound.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn f(x: a) where a: 1 { x }"
---
Where(
    Bound(
        1,
        21,
    ),
    1,
    17,
)
