crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_where_bound_after_plus.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: " a: Show +"
---
Bound(
    1,
    11,
)
