crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__fn_bodiless.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: fn randomUUID() String
---
FnDecl {
    is_async: false,
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 4,
            },
            end: Position {
                line: 1,
                column: 14,
            },
        },
        value: "randomUUID",
    },
    params: [],
    ret: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 17,
                },
                end: Position {
                    line: 1,
                    column: 23,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 17,
                                },
                                end: Position {
                                    line: 1,
                                    column: 23,
                                },
                            },
                            value: "String",
                        },
                    ],
                },
                args: [],
            },
        },
    ),
    where_clause: [],
    body: None,
}
