crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__fn_bodiless_no_ret.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn next(it: i)"
---
FnDecl {
    is_async: false,
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 4,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        value: "next",
    },
    params: [
        Param {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                value: Var(
                    "it",
                ),
            },
            annotation: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 14,
                        },
                    },
                    value: Var {
                        name: "i",
                        args: [],
                    },
                },
            ),
        },
    ],
    ret: None,
    where_clause: [],
    body: None,
}
